--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@serialport/parser-readline": "^12.0.0",
-    "serialport": "^12.0.0"
+    "serialport": "12.0.0"
   }
 }
